- Lazy day(); Contact section is done for now just need to add function so that a user can send a email directly + fix CSS design/code. Still need to align about and skills section, and work on the portfolio area.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 h1{
  font-family: Roboto;
- color: white;
+ /* color: white; */
 }
 
 body{
@@ -9,7 +9,7 @@ body{
 
 h2{
   font-family: Roboto;
- color: white;
+ /* color: white; */
 }
 
 .profile-pic {
@@ -24,14 +24,14 @@ h2{
     background-color: rgb(0, 0, 0);
 }
 
-.profile-container {
-    display: flex;           /* Use Flexbox to align items horizontally */
-    align-items: center;     /* Vertically center the items */
-    gap: 20px;               /* Space between image and text */
+.profile-container{
+    display: flex;           
+    align-items: center;     
+    gap: 20px;              
 }
 
 .profile-text {
-    max-width: 400px;        /* Optional: Set max width for the text */
+    max-width: 400px;        
 }
 
 
@@ -68,4 +68,17 @@ nav ul li a {
     color: white; 
     text-decoration: none; 
     font-size: 18px; 
+}
+
+.contact-section {
+    gap: 10px;
+    display: flex; 
+    align-items: center;
+    font-size: 30px;
+    background-color: rgb(28, 170, 226);
+    color: white;
+    font-family: Roboto;
+}
+i {
+  color: white;
 }
